# qsynthi

./: .gitignore  CMakeLists.txt  QSynthi.jucer  README.md  juce_audiopluginhost.filtergraph
Source/: CMakeLists.txt  Parameter.cpp  Parameter.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QSynthi.cpp  QSynthi.hpp  Wavetable.cpp  Wavetable.hpp  WavetableOscillator.cpp  WavetableOscillator.hpp  WavetablePlot.cpp  WavetablePlot.h  Wavetables.cpp  Wavetables.h  Wavetables.hpp  list.hpp
Source/img/: CMakeLists.txt
cmake/: get_cpm.cmake
